# ThunderHack-Reborn

./: .gitignore  LICENSE  README.md  build.gradle  d  d.pub  errors.txt  gradle.properties  jstack.txt  xiao  xiao.pub
.github/workflows/: discord.yml  gradle.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  build.sh  optimizer.cpp  optimizer.h
src/main/java/thunder/hack/: ThunderHack.java
src/main/java/thunder/hack/accessors/: IPlayerPositionLookS2CPacket.java
src/main/java/thunder/hack/core/: Core.java  Managers.java  TextureReloadListener.java
src/main/java/thunder/hack/injection/: JsonEffectGlShaderMixin.java  MixinAbstractBlock.java  MixinArmorFeatureRenderer.java  MixinBackgroundRenderer.java  MixinBlock.java  MixinBoatEntity.java  MixinBoatEntityRenderer.java  MixinCamera.java  MixinCapeFeatureRenderer.java  MixinClientPlayerInteractionManager.java  MixinClientWorld.java  MixinCobwebBlock.java  MixinCoreShader.java  MixinCustomWeather.java  MixinDimensionEffects.java  MixinDrawContext.java  MixinDynamic.java  MixinEndCrystalEntityRenderer.java  MixinEntity.java  MixinEntityLiving.java  MixinEntityRenderer.java  MixinExplosionS2CPacket.java  MixinGameMenuScreen.java  MixinGameRenderer.java  MixinHandledScreen.java  MixinHeldItemRenderer.java  MixinInGameHud.java  MixinItemRenderer.java  MixinKeyBinding.java.bak  MixinKeyboard.java  MixinKeyboardInput.java  MixinLightmapTextureManager.java  MixinLivingEntity.java  MixinModel.java  (+23 more)
src/main/resources/: fabric.mod.json  thunderhack.accesswidener  thunderhack.mixins.json
(+333 files in other folders)
